added favicon stuff

--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@
   box-sizing: border-box;
   font-size: 18px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
