--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,23 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   -webkit-tap-highlight-color: transparent;
 }
+
+a
+{
+  text-decoration:none;
+  color: #36e0e6;
+}
+
+::-webkit-scrollbar 
+{
+  width: 6px;
+  background-color: #F5F5F5;
+  border-radius:10px;
+} 
+
+::-webkit-scrollbar-thumb 
+{
+  background-color: #000000;
+  height: 60px;
+  border-radius:10px;
+}
