--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,19 @@ a
 
 ::-webkit-scrollbar 
 {
-  width: 6px;
+  width: 10px;
   background-color: #F5F5F5;
   border-radius:10px;
 } 
 
+::-webkit-scrollbar-track 
+{
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px;
+}
+
 ::-webkit-scrollbar-thumb 
 {
-  background-color: #000000;
-  height: 60px;
+  background-color: var(--green);
   border-radius:10px;
 }
