--- a/src/components/NewsPage/NewsPage.module.css
+++ b/src/components/NewsPage/NewsPage.module.css
@@ -1,24 +1,34 @@
-.Grid
-{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    margin-top: 40px;
-    grid-gap: 10px;
-    
-}
-
 .Title
 {
    margin-top:70px;
    color:var(--green);
    font-size:1.5rem;
    text-shadow: 0px 4px 4px rgba(11, 87, 91, 0.25);
+   text-align: center;
+}
+
+.Grid
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    margin-top: 20px;
+    grid-gap: 10px;
+    
 }
 
 .Keyword
 {
     font-size:inherit;
     font-weight: 400;
+}
+
+@media  (min-width:768px) 
+{
+    .Title
+    {
+        text-align: unset;
+    }
+
 }
 
 @media  (min-width:768px) and (max-width:991px)
@@ -38,6 +48,8 @@
     }
 
 }
+
+
 
 
 
