fixed margin in the flex tags for news,remeber to add a filter option later for languages

--- a/src/components/NewsPage/News/News.module.css
+++ b/src/components/NewsPage/News/News.module.css
@@ -35,12 +35,14 @@
     justify-content: space-between ;
     align-content: space-between;
     flex-wrap:wrap;
+    margin-top: -20px;
 
 }
 
 .Publisher,.Date
 {
     background: var(--green);
+    margin-top: 20px;
     color:#fff;
     font-size:0.8rem;
     padding:4px;
