trying out intersection observer

--- a/src/components/LoadingPage/LoadingPage.module.css
+++ b/src/components/LoadingPage/LoadingPage.module.css
@@ -4,6 +4,7 @@
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     margin-top: 60px;
     grid-gap: 10px;
+    margin-bottom: 100px;
     
 }
 
