--- a/src/components/Currency/Currency.module.css
+++ b/src/components/Currency/Currency.module.css
@@ -10,11 +10,169 @@
     background: var(--green);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+    padding: 5px 12px;
 }
 
 
 .Converter_Grid
 {
     
+    margin-top: 20px;
+    padding:10px;
+}
+
+.Inputs
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.Inputs label,.Inputs select, .Inputs input
+{
+    display:block;
+}
+
+.Inputs label:not(:first-child)
+{
+    margin-top:20px;
+}
+
+.Inputs select
+{
+    border-radius: 9px;
+    border: none;
+    background: #ccc;
+    padding: 2px;
+    outline: none;
+    font-size: 15px;
+    margin-top:4px;
+}
+
+.Inputs input
+{
+    border-radius: 4px;
+    outline: none;
+    padding:4px;
+    font-size: 15px;
+}
+
+.Inputs option
+{
+    font-size: 15px;
+}
+
+.Convert_Btn
+{
+    cursor: pointer;
+    margin:10px auto;
+    background: var(--grey-brown);
+    color:var(--green);
+    padding: 10px;
+    border:none;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+.Convert_Btn:hover
+{
+    background:var(--green);
+    color:#fff;
+    padding: 10px;
+    border:none;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+.Display
+{
+    padding:10px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.Currency
+{
+    background: var(--green);
+    border-radius: 5px;
+    color:#fff;
+    text-align:center;
+    min-width:80px;
+    width:20%;
+    max-width:130px;
+    margin:auto;
+    padding:5px;
+    display:inline-block
+}
+
+.Value
+{
+    font-size:1.05em;
+}
+
+.Symbol
+{
+    font-weight: bold;
+    font-size:1.5em;
+}
+
+.Convert_Icon
+{
+    text-align: center;
+    margin: 10px auto;
+    display: inline-block;
+}
+
+.Hori
+{
+    display: inline-block;
+    margin: inherit;
+}
+.Vert
+{
+    display: none;
+}
+
+@media (min-width:768px)
+{
+    .Converter_Grid
+    {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+    }
+
+    .Display
+    {
+        
+        display:block;
+    }
+
+    .Convert_Icon
+    {
+        min-width:80px;
+        width:20%;
+        max-width:130px;
+        margin:10px auto;
+        display: block;
+    }
+
+    .Hori
+    {
+        display: none;
+    }
+
+    .Vert
+    {
+        display: inline-block;
+    }
+
+    .Currency
+    {
+       display:block
+    }
 
 }
+
