--- a/src/components/Currency/Currency.module.css
+++ b/src/components/Currency/Currency.module.css
@@ -49,6 +49,7 @@
     outline: none;
     font-size: 15px;
     margin-top:4px;
+    max-width:100%;
 }
 
 .Inputs input
@@ -77,14 +78,21 @@
     font-weight: bold;
 }
 
+
 .Convert_Btn:hover
 {
     background:var(--green);
     color:#fff;
     padding: 10px;
-    border:none;
-    border-radius: 4px;
-    font-weight: bold;
+    
+}
+
+.Convert_Btn:disabled,
+.Convert_Btn:disabled:hover
+{
+    cursor:not-allowed;
+    background: var(--grey-brown);
+    color:var(--green);
 }
 
 .Display
