--- a/src/components/PreHome/PreHome.module.css
+++ b/src/components/PreHome/PreHome.module.css
@@ -6,10 +6,19 @@
 }
 
 
-.Carousel,.Currency_Weather
+.Carousel,.Currency_Conv
 {
   margin-top:20px;
 }
+
+.Carousel
+{
+    
+    min-height:300px;
+    border:1px solid #000;
+}
+
+
 
 @media screen and  (min-width:768px)
 {
@@ -17,13 +26,27 @@
     {
         display: grid;
         grid-gap: 10px;
-        grid-template-columns: 7fr 5fr;
+        grid-template-columns: repeat(12,1fr) ;
         justify-content:space-around
     }   
 
-    .Carousel,.Currency_Weather
+    .Carousel,.Currency_Conv
     {
       margin-top:0px;
+    }
+
+    .Carousel
+    {
+        
+       
+        grid-column-start: 1;
+        grid-column-end: 8;
+    }
+
+    .Currency_Conv
+    {
+        grid-column-start: 8;
+        grid-column-end: 13;
     }
         
    
