--- a/src/components/PreHome/PreHome.module.css
+++ b/src/components/PreHome/PreHome.module.css
@@ -14,7 +14,9 @@
 .Carousel
 {
     
-    min-height:300px;
+    min-height:100%;
+    height:220px;
+    max-height:400px;
     border:1px solid #000;
 }
 
