--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -20,7 +20,11 @@
    left:unset;
    right:45px;
    bottom:0;
+   background: #fff !important;
    z-index:100;
+   display: block;
+   border-radius: 50%;
+   padding: 0;
 }
 
 .Adjusted_Slider button:nth-of-type(2)
@@ -32,4 +36,6 @@
 .Adjusted_Slider button::before
 {
     color: var(--green);
+    display: block;
+    transform: translate(0%,1PX)
 }
