--- a/src/components/Carousel/CarouselItem/CarouselItem.module.css
+++ b/src/components/Carousel/CarouselItem/CarouselItem.module.css
@@ -11,6 +11,7 @@
     height:100%;
     width:100%;
     object-fit: cover;
+    background: var(--green);
 }
 
 .Slide_Header
@@ -21,5 +22,6 @@
     left: 10px;
     bottom:20px;
     padding:5px;
-    font-size:12px;
+    font-size:14px;
+    max-width:72%;
 }
