--- a/src/components/NewsPage/NewsPage.module.css
+++ b/src/components/NewsPage/NewsPage.module.css
@@ -1,6 +1,7 @@
 .Title
 {
  
+    margin-top: 15px;
    color:var(--green);
    font-size:1.5rem;
    text-shadow: 0px 4px 4px rgba(11, 87, 91, 0.25);
