--- a/src/components/Carousel/CarouselItem/CarouselItem.module.css
+++ b/src/components/Carousel/CarouselItem/CarouselItem.module.css
@@ -11,7 +11,7 @@
     height:100%;
     width:100%;
     object-fit: cover;
-    background: var(--green);
+    background: var(--light-green);
 }
 
 .Slide_Header
