--- a/src/components/SideBar/NavItems/NavItems.module.css
+++ b/src/components/SideBar/NavItems/NavItems.module.css
@@ -69,7 +69,7 @@
     .NavWrapper
     {
         transform: translateX(-120%);
-        top:unset;
+        top:55px;
         will-change: transform;
         transition: transform 0.6s ease-in-out;
     } 
